--- a/core-ext/build.gradle
+++ b/core-ext/build.gradle
@@ -1,20 +1,39 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
+ext {
+    // 显示在仓库中的package name
+    bintrayName = 'core-ext'
+    // lib名称，其实是和上面一样的标识，用途不一样
+    libraryName = 'core-ext'
+    // artifactId
+    artifact = 'core-ext'
+    // 仓库名称
+    bintrayRepo = 'core'
+    // 说明网址，就github仓库地址
+    siteUrl = 'https://github.com/Grieey/CoreExt'
+    // 版本控制，也是github地址
+    gitUrl = 'https://github.com/Grieey/CoreExt.git'
+    // 库说明
+    libraryDescription = 'Base class of activity、fragment、application'
+}
+
+apply from: '../deploy.gradle'
+
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion androids.compileSdkVersion
+    buildToolsVersion androids.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.github.grieey.core_ext"
-        minSdkVersion 23
-        targetSdkVersion 30
+        minSdkVersion androids.minSdkVersion
+        targetSdkVersion androids.compileSdkVersion
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -24,22 +43,24 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility androids.javaSourceCompatibility
+        targetCompatibility androids.javaSourceCompatibility
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = androids.jvm
     }
 }
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    api "org.jetbrains.kotlin:kotlin-stdlib:${androids.kotlin}"
+    api "androidx.core:core-ktx:${androidx.ktx}"
+    api "androidx.appcompat:appcompat:${androidx.appcompat}"
+    api "com.google.android.material:material:${androidx.material}"
+    api "androidx.constraintlayout:constraintlayout:${androidx.constraintlayout}"
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
