--- a/core-ext/build.gradle
+++ b/core-ext/build.gradle
@@ -17,7 +17,7 @@ ext {
     // 版本控制，也是github地址
     gitUrl = 'https://github.com/Grieey/CoreExt.git'
     // 库说明
-    libraryDescription = 'Base class of activity、fragment、application'
+    libraryDescription = 'Extensions base on kotlin standard lib and Android support lib'
 }
 
 apply from: '../deploy.gradle'
