--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,13 @@
+import com.github.grieey.buildplugin.Config
+
 plugins {
   id 'com.android.application'
   id 'kotlin-android'
+  id 'com.github.grieey.build-plugin'
 }
 
 android {
-  compileSdkVersion 30
+  compileSdkVersion Config.compileSdkVersion
   buildToolsVersion "30.0.2"
 
   defaultConfig {
@@ -39,6 +42,13 @@ dependencies {
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'com.google.android.material:material:1.2.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+  if (Config.isDebugLocalLib) {
+    implementation project(':core-ext')
+  } else {
+    implementation 'com.github.Grieey:core-ext:0.0.10'
+  }
+
   testImplementation 'junit:junit:4.+'
   androidTestImplementation 'androidx.test.ext:junit:1.1.2'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
