--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 android {
   compileSdkVersion Config.compileSdkVersion
-  buildToolsVersion "30.0.2"
+  buildToolsVersion Config.buildToolsVersion
 
   defaultConfig {
     applicationId "com.github.grieey.coreext"
