--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
 
   defaultConfig {
     applicationId Config.applicationId
-    minSdkVersion 23
+    minSdkVersion Config.minSdkVersion
     targetSdkVersion 30
     versionCode 1
     versionName "1.0"
