新增float 保留小数位的扩展

--- a/core-ext/build.gradle
+++ b/core-ext/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     implementation Deps.Google.material
     implementation Deps.Google.gson
+    testImplementation(Deps.Test.junit)
     androidTestImplementation Deps.Androidx.junit
     androidTestImplementation Deps.Androidx.espressoCore
 }
